@@ -1,5 +1,10 @@
 2012-12-06  Jakub Jelinek  <jakub@redhat.com>
 
+	PR middle-end/43631
+	* var-tracking.c (emit_note_insn_var_location, emit_notes_in_bb):
+	Clear BLOCK_FOR_INSN on notes emitted in between basic blocks,
+	don't adjust BB_END when inserting note after BB_END of some bb.
+
 	PR c++/55137
 	* fold-const.c (fold_binary_loc) <associate>: Don't introduce
 	TREE_OVERFLOW through reassociation.  If type doesn't have defined
